2007-10-07  Sven Over  <svenover@svenover.de>

	* src/dvbcut.h:
	* src/dvbcut.cpp:
	* src/eventlistitem.h:
		Display output timecode and picture number.

	* src/dvbcut.cpp:
		Evaluate 'expfile' tag or attribute.

2007-10-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
		Implement "pipe mode" for reading from non-regular files.

	* src/index.cpp:
	* src/index.h:
		Add separate function for saving to stdout.

	* src/main.cpp:
		Allow -generateidx to read from stdin again.

2007-09-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/defines.h:
		Move default values to src/settings.cpp.

	* src/eventlistitem.cpp:
		Use label strings from the configuration file.
 
	* src/settings.cpp:
	* src/settings.h:
		Add label strings to the configuration file.

2007-09-29  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/eventlistitem.cpp:
		Use light gray background for STOP items.

2007-09-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Add delete all/others function to event list
		(patch by Ralph Glasstetter).

2007-09-13  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Really fix project file encoding this time.

2007-09-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Always use UTF-8 encoding for project file.
		Add a proper XML declaration at the beginning.

2007-09-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Locale patch by Michael Kreuzer.

2007-08-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.cpp:
		Prepare for DTS audio.

	* src/psfile.cpp:
		Improved stream detection (including DTS and subtitle hooks).

2007-08-15  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Improved SI table parser and stream detection.

2007-08-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Also detect teletext and subtitle streams. We may